Replace Deque (1.6) with List, as we don't need the extra Deque functionality
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/compress/trunk@1487167 13f79535-47bb-0310-9956-ffa450edef68